# noctis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  README.rst  description.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: test_suite.yml
docs/source/: Installation.rst  conf.py  index.rst
docs/source/pages/: classdiagram.rst  code.rst  configuration.rst  installation.rst  workflows.rst
docs/source/pages/data_architecture/: index.rst
docs/source/pages/data_transformation/: index.rst
docs/source/pages/repository/: index.rst
docs/source/reference/: index.rst
docs/source/static/diagrams/: CSV_to_GDB_workflow.mmd  GDB_to_PyObj_workflow.mmd  class_diagram.mmd
docs/source/templates/: authors.html
jupyters/: NOCTIS_UPSTO_Workflow_Examples.ipynb  NOCTIS_USPTO_Workflow_Examples.ipynb  config.yaml  schema.json  schema.yaml
jupyters/data/for_figures/: performance.csv
jupyters/figures_and_tables/: fig4_performance.ipynb  tables_uspto.ipynb
jupyters/queries/: custom_query.yaml  table1.yaml  table3.yaml
src/noctis/: __init__.py  utilities.py
src/noctis/configuration/: config.py  defaults.py
src/noctis/data_architecture/: datacontainer.py  datamodel.py  graph_schema.py
src/noctis/data_transformation/data_styles/: dataframe_stylers.py
src/noctis/data_transformation/neo4j/: neo4j_csv_styling.py  neo4j_formatter.py  stylers.py
tests/: test_general.py
tests/data_architecture/: test_datamodel.py  test_graph_schema.py
tests/data_transformation/data_styles/: test_dataframe_stylers.py
tests/data_transformation/neo4j/: test_neo4j_csv_styling.py  test_neo4j_formatter.py
tests/data_transformation/postprocessing/: test_chemdata_generators.py
tests/data_transformation/preprocessing/: test_core_graph_builder.py  test_data_preprocessing.py  test_graph_expander.py  test_reaction_preprocessing.py  test_utils.py
tests/repository/neo4j/: test_neo4j_functions.py  test_neo4j_queries.py  test_neo4j_repository.py
(+10 files in other folders)
